<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.ogadai.alee.homerc.MainActivity">

    <TextureView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fullscreen_content"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/connection_status"
                android:textColor="#33b5e5"
                android:textSize="12dp" />

            <ImageButton
                android:id="@+id/connection_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@null"
                android:src="@drawable/red"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <ImageButton
                android:id="@+id/connection_setup"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:clickable="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/xbox_start_button" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/dpad_controls"
            style="?metaButtonBarStyle"
            android:layout_margin="10dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="left|bottom"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/left_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical|left"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/dpad_left_button" />

            <ImageButton
                android:id="@+id/right_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_vertical|right"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/dpad_right_button" />

            <ImageButton
                android:id="@+id/backward_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom|center_horizontal"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/dpad_down_button" />

            <ImageButton
                android:id="@+id/forward_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center|top"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/dpad_up_button" />

            <FrameLayout
                android:id="@+id/dpad_controls_ui"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/xbox_buttons"
            style="?metaButtonBarStyle"
            android:layout_margin="10dp"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="right|bottom"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/x_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical|left"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/xbox_x_button" />

            <ImageButton
                android:id="@+id/b_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical|right"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/xbox_b_button" />

            <ImageButton
                android:id="@+id/a_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="bottom|center_horizontal"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/xbox_a_button" />

            <ImageButton
                android:id="@+id/y_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center|top"
                android:clickable="false"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/xbox_y_button" />

            <FrameLayout
                android:id="@+id/xbox_buttons_ui"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true" />
        </FrameLayout>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="0°"
            android:textColor="#E0E080"
            android:textSize="18dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/connection_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/settings_bg"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/connection_connect"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_button"
                    android:elevation="1dp"
                    android:text="@string/connection_connect" />

                <EditText
                    android:id="@+id/connection_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/textbox_bg"
                    android:padding="5dp"
                    android:text="jklasd"
                    android:textSize="20dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/motor1_swap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/motor_swap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/motor2_swap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/motor_swap"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/use_dpad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dpad_option" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/dpad_desc"
                    android:textColor="#65FFFFFF" />

                <CheckBox
                    android:id="@+id/check_steering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/steering_option" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/steering_desc"
                    android:textColor="#65FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/use_xboxbuttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/xboxbuttons_option" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/xboxbuttons_desc"
                    android:textColor="#65FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
